# kids_journal

./: .gitignore  LICENSE  README.md  diagram.puml  package-lock.json  package.json
web/back/: .gitignore  Dockerfile  data.json  deploy.sh  makefile  pyproject.toml  readme.md  requirements.txt  setup.cfg  token  version.json
web/back/db/: create_tables.py  entity.py  organization.py  settings.py  utils.py
web/back/db/models/: child.py  employees.py  groups.py  organizations.py  parents.py
web/back/db/services/: child.py  employee.py  groups.py  organization.py  parent.py  presentations.py  schedule.py  skills.py  subjects.py  user.py
web/back/models/: __init__.py  child.py  employees.py  entity.py  group.py  groups.py  organizations.py  parents.py  presentations.py  role.py  schedule.py  skills.py  subjects.py  user.py  utils.py
web/back/src/: api.py  create_tables.py  dependencies.py  kek.py  openapi.yaml  routers.py  settings.py
web/back/src/auth/: __init__.py  schemes.py  settings.py  validators.py  widget.py
web/back/src/exception_handlers/: unauthorized.py
web/back/src/middlewares/: admin_middleware.py  auth_middleware.py
web/back/src/routers/: auth.py  child.py  employee.py  groups.py  index.py  organization.py  parent.py  presentation.py  router.py  routers.py  schedule.py  skills.py  subject.py  user.py  utils.py
web/back/tests/: test_groups.py  test_organizations.py
web/back/tg_bot/: api.json  api_client_settings.py  api_utils.py  bot.py  callbacks.py  message_replies.py  openapi.yaml  persistence.py  settings.py  start.py  states.py
(+132 files in other folders)
